| Summary: | ASTERISK-22054: module reload of res_sip_outbound_registration.so results in Asterisk crash - assertion failure | ||
| Reporter: | Rusty Newton (rnewton) | Labels: | |
| Date Opened: | 2013-07-08 18:08:15 | Date Closed: | 2013-07-09 06:05:59 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | |
| Versions: | SVN | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | SVN-trunk-r393816, Ubuntu 12.04 | Attachments: | ( 0) backtrace.txt ( 1) res_sip.conf.txt |
| Description: | Module reload of res_sip_outbound_registration.so results in Asterisk crash. Not much else to say! I have a bit of config in the res_sip.conf so I'll include that with the trace.
| ||
| Comments: | |||