Ensure all pjsip_regc_* access occurs within a pjlib thread.

(closes issue ASTERISK-22054)
Reported by: Rusty Newton


git-svn-id: https://origsvn.digium.com/svn/asterisk/trunk@393870 65c4cc65-6c06-0410-ace0-fbb531ad65f3